@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Sun Feb 26 00:30:36 2006
+# Generated on Sun Feb  5 08:53:31 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -565,13 +565,12 @@ class Gpodderstatus(SimpleGladeApp):
 
 
 class Gpodderchannel(SimpleGladeApp):
-    waiting = None
-    url = ""
-    result = False
-    
     def __init__(self, path="gpodder.glade",
                  root="gPodderChannel",
                  domain=app_name, **kwargs):
+        waiting = None
+        url = ""
+        result = False
         path = os.path.join(glade_dir, path)
         SimpleGladeApp.__init__(self, path, root, domain, **kwargs)
 
