@@ -16,29 +16,48 @@ import gobject
 
 import libgpodder
 
+from os.path import exists
+
 from liblocdbwriter import writeLocalDB
 from liblocdbreader import readLocalDB
 
+from threading import Event
+from libwget import downloadThread
 import re
 
-
-# podcastChannel: holds data for a complete channel
 class podcastChannel(object):
-    url = ""
-    title = ""
-    link = ""
-    description = ""
-    items = []
-    image = None
-    shortname = None
-    downloaded = None
-
+    """holds data for a complete channel"""
     def __init__( self, url = "", title = "", link = "", description = ""):
         self.url = url
         self.title = title
         self.link = link
         self.description = stripHtml( description)
         self.items = []
+        self.image = None
+        self.shortname = None
+        self.downloaded = None
+        self.__filename = None
+        self.__download_dir = None
+        
+    # Create all the properties
+    def get_filename(self):
+        if self.__filename == None:
+            self.__filename = ""
+
+            for char in self.title.lower():
+                if (char >= 'a' and char <= 'z') or (char >= 'A' and char <= 'Z') or (char >= '1' and char <= '9'):
+                    self.__filename = self.__filename + char
+                    
+        if self.__filename == "":
+            self.__filename = "__unknown__"
+
+        return self.__filename
+
+    def set_filename(self, value):
+        self.__filename = value
+        
+    filename = property(fget=get_filename,
+                        fset=set_filename)
     
     def addItem( self, item):
         self.items.append( item)
@@ -60,9 +79,9 @@ class podcastChannel(object):
         writeLocalDB( localdb, self.downloaded)
     
     def printChannel( self):
-        print "- Channel: \"" + self.title + "\""
+        print '- Channel: "' + self.title + '"'
         for item in self.items:
-            print "-- Item: \"" + item.title + "\""
+            print '-- Item: "' + item.title + '"'
 
     def isDownloaded( self, item):
         return libgpodder.gPodderLib().podcastFilenameExists( self, item.url)
@@ -96,18 +115,63 @@ class podcastChannel(object):
 
         return -1
 
-
-# podcastItem: holds data for one object in a channel
-class podcastItem(object):
-    url = ""
-    title = ""
-    length = ""
-    mimetype = ""
-    guid = ""
-    description = ""
-    link = ""
+    def downloadRss( self, force_update = True):
+        
+        if (self.filename == "__unknown__" or exists( self.cache_file) == False) or force_update:
+            event = Event()
+            downloadThread(self.url, self.cache_file, event).download()
+            
+            while event.isSet() == False:
+                event.wait( 0.2)
+                #FIXME: we do not want gtk code when not needed
+                while gtk.events_pending():
+                    gtk.main_iteration( False)
+        
+        return self.cache_file
     
-    def __init__( self, url = "", title = "", length = "0", mimetype = "", guid = "", description = "", link = ""):
+    def get_save_dir(self):
+        savedir = self.download_dir + self.filename + "/"
+        libgpodder.gPodderLib().createIfNecessary( savedir)
+        return savedir
+    
+    save_dir = property(fget=get_save_dir)
+
+    def get_download_dir(self):
+        print "get download dir:", self, self.__download_dir
+        if self.__download_dir == None:
+            return libgpodder.gPodderLib().downloaddir
+        else:
+            return self.__download_dir
+
+    def set_download_dir(self, value):
+        self.__download_dir = value
+        libgpodder.gPodderLib().createIfNecessary(self.__download_dir)
+        print "set download dir:", self, self.__download_dir        
+        
+    download_dir = property (fget=get_download_dir,
+                             fset=set_download_dir)
+
+    def get_cache_file(self):
+        return libgpodder.gPodderLib().cachedir + self.filename + ".xml"
+
+    cache_file = property(fget=get_cache_file)
+    
+    def get_index_file(self):
+        # gets index xml filename for downloaded channels list
+        return self.save_dir + "index.xml"
+    
+    index_file = property(fget=get_index_file)
+
+class podcastItem(object):
+    """holds data for one object in a channel"""
+    def __init__( self,
+                  url = "",
+                  title = "",
+                  length = "0",
+                  mimetype = "",
+                  guid = "",
+                  description = "",
+                  link = ""):
         self.url = url
         self.title = title
         self.length = length
@@ -131,31 +195,6 @@ class podcastItem(object):
 
         return str( size) + " Bytes"
 
-
-class configChannel( object):
-    title =""
-    url =""
-    filename = None
-
-    def __init__( self, title = "", url = "", filename = None):
-        self.title = title
-        self.url = url
-        
-        if filename == None:
-            self.filename = self.createFilename()
-        else:
-            self.filename = filename
-    
-    def createFilename( self):
-        result = ""
-
-        for char in self.title.lower():
-            if (char >= 'a' and char <= 'z') or (char >= 'A' and char <= 'Z') or (char >= '1' and char <= '9'):
-                result = result + char
-
-        return result
-
-
 def channelsToModel( channels):
     new_model = gtk.ListStore( gobject.TYPE_STRING, gobject.TYPE_STRING, gobject.TYPE_OBJECT)
     
@@ -170,9 +209,7 @@ def channelsToModel( channels):
     
     return new_model
 
-
 def stripHtml( html):
     # strips html from a string (fix for <description> tags containing html)
     rexp = re.compile( "<[^>]*>")
     return rexp.sub( "", html)
-
